<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="stock_already_saved">This stock is already saved!</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="no_network">The network is not available to load the stock qoutes</string>
    <string name="no_data">No Data Available</string>
    <string name="invalid_qoute_symbol">Invalid Stock Symbol</string>
    <string name="content_descr_add_symbol">Adding new Stock Symbol</string>
    <string name="days_range">Days range</string>
    <string name="year_range">Year range</string>
    <string name="previous_closing">Previous close value</string>
    <string name="last_trade_date">Last trade date</string>
    <string name="price_eps_estimate_current_year">Price EPS Estimate Current Year</string>
    <string name="price_eps_estimate_next_year">Price EPS Estimate Next Year</string>
    <string name="change_from_2h_days">Average change from 200 days</string>
    <string name="change_from_50_days">Average change from 50 days</string>


</resources>
